# FimicsC2020

./: CMakeLists.txt
qt/: CMakeLists.txt
qt/src/: QtMain.cpp
qt/src/first1/: main.cpp  mypushbutton.cpp  mywidget.cpp  mywidget.h
src/c/advance/: XBitOperation.c  XConst.c  XConst1.c  XDefine.c  XExternTest.c  XMalloc.c  XRealloc.c  XSizeof.c  XSprintf.c  XSscanf.c  XStack.c  XStackGrowth.c  XStaticExtern.c  XSubString.c  XTypedef.c  XVarModify.c  XVarPass.c  XVoid.c
src/c/advance/array/: ArrayOne.c  ArrayPointerDefine.c  ArrayTwoName.c  PointerArraySort.c
src/c/advance/file/: FileConfig.c  FileRW.c  FileRW2.c  config.c  config.h  config.txt
src/c/advance/fun/: FunCallBack.c  FunPointer.c  FunPointerAsParams.c
src/c/advance/linkedlist/: LinkedList2.c  LinkedListFun.c  LinkedListStatic.cpp  linkList.h  lintList.c
src/c/advance/pointer/: XPointerEasyError.c  XPointerNull.c  XPointerStep.c  XPointerString.c  XPointerTwoAsInputParams.c  XPointerTwoAsOutputParams.c  XPointerTwoForFile.c  XPointerValue.c  XpointerParams.c
src/c/advance/struct/: MemoryAlign.c  StructCopy.c  StructOffet.c  StructPointer.c  StructTwoPointer.c  StructUse.c
src/c/array/: ArrayDemo.c  ArrayParmas.c  TwoArray.c
src/c/dataType/: DataType.c
src/c/file/: Constant.c  Constant.h  FGetc.c  FPutc.c  FeofDemo.c  FgetsFputs.c  FileBuffer.c  FileCopy.c  FileOpen.c  FileStat.c  FwriteFread.c  RandFile.c  SprintfSscanf.c
src/c/file/res/: fgetsfputs.txt
src/c/flow/: Flow.c  ForDemo.c  Hello.c
src/c/mutilFile/: head.h  main.c
src/c/pointer/: MutilPointer.c  PArray.c  POperation.c  PReturn.c  PassValueAdress.c  Pointer.c
src/c/string/: Atof.c  CharArray.c  Malloc.c  Malloc2.c  PString.c  SCopy.c  SFind.c  SPrintf.c  SSubString.c  STrim.c  Sresver.c  StrNcpy.c  Strcat.c  Strcmp.c  Strcmpz.c  StringCount.c  Strtok.c
src/c/struct/: EnumDemo.c  HeapMalloc.c  StructArray.c  StructDefine.c  StructFunction.c  StructInner.c  StructMemberPointer.c  StructPointer.c  StructScore.c  StructSize.c  TypeDefDemo.c  UnionAndEnum.c  UnionDemo.c
src/cpp/basic/: CoionsScope.cpp  XCout.cpp
src/cpp/basic/namespace/: XNameSpace.c  game1.cpp  game2.cpp
src/cpp/basic1/: ConstRef.cpp  PassValue.cpp  PointerRef.cpp  StrengthenC.cpp  XRefcpp  XUsing.cpp
src/cpp/basic1/const/: XConst.cpp  test.c
src/cpp/basic1/namespace/: XNameSpace.cpp  game1.h  game2.h
src/cpp/expection9/: ExceptionLifeCycle.cpp  ExceptionPolym.cpp  Expection1.cpp  ExpectionStardand.cpp  MyException.cpp  StreamFile.cpp  StreamInput.cpp  StreamOutput.cpp  TypeCast.cpp
src/cpp/extends6/: Basic.cpp  DiamondExtends.cpp  ExtendSameMebmer.cpp  ExtendsCategory.cpp  ExtendsConstructor.cpp  ExtendsModel.cpp  ExtendsSameStaticMember.cpp  MutilExtends.cpp
src/cpp/fun2/: CWarp.c  CppWarp.cpp  DefaultPamars.cpp  ExternC.cpp  FunOverLoad.cpp  MemberAttr.cpp  XCircle.cpp  XInlineFun.cpp  test.c  test.h
src/cpp/genobj3/: ClassObjAsMember.cpp  ConStructAndDeStruct.cpp  ConstructCategory.cpp  ConstructCopy.cpp  ConstructRegular.cpp  Cube.cpp  DeepCopy.cpp  InitList.cpp  NewDelete.cpp  XExplicit.cpp
src/cpp/oop4/: ClassObject.cpp  ConstFunction.cpp  FriendClass.cpp  FriendGlobalFunction.cpp  FriendMemberFunction.cpp  NullPointer.cpp  SingleTon1.cpp  SingleTon2.cpp  XSttic.cpp  XThis.cpp
src/cpp/operator5/: OperatorAdd.cpp  OperatorEq.cpp  OperatorFun.cpp  OperatorIncreat.cpp  OperatorLeftShit.cpp  OperatorString.cpp  SmartPoint.cpp  XArray.cpp  myArray.cpp  myArray.h  myString.cpp  myString.h
src/cpp/template/: CharIntSort.cpp  ClassTemplate1.cpp  ClassTemplate2.cpp  ClassTemplate3.cpp  ClassTemplate4AsParms.cpp  ClassTemplate5Extends.cpp  ClassTemplate6.cpp  ClassTemplate7Friend.cpp  ClassTemplate8.cpp  FunctionTemplate.cpp  FunctionTemplate1.cpp  myArray.cpp  myArray.h
src/cpp/virtualfun7/: AllVir.cpp  Polym.cpp  VirtualFun.cpp
src/stl/: Adapter14.cpp  Basic1.cpp  Collections.cpp  Deque5.cpp  Find16.cpp  FunctionObject11.cpp  Functional13.cpp  Group10.cpp  Iterator15.cpp  Lambda12.cpp  List7.cpp  Map9.cpp  Numeric18.cpp  Queue6.cpp  ReplaceAndCopy17.cpp  Set8.cpp  Sort16.cpp  Stack4.cpp  String2.cpp  Vector3.cpp
