cmake_minimum_required(VERSION 3.19)
project(FimicsC2020)

set(CMAKE_CXX_STANDARD 14)

add_executable(FimicsC2020
#        main.cpp
#        src/c/flow/Hello.c
#        src/c/dataType/DataType.c
#        src/c/flow/Flow.c
#        src/c/flow/ForDemo.c
#        src/c/array/ArrayDemo.c
#        src/c/array/TwoArray.c
#        src/c/string/CharArray.c
#
#        src/c/mutilFile/add.c
#        src/c/mutilFile/main.c
#        src/c/mutilFile/mul.c
#        src/c/mutilFile/sub.c
#
#        src/c/pointer/Pointer.c
#        src/c/pointer/PArray.c
#        src/c/pointer/POperation.c

#        src/c/pointer/MutilPointer.c

#        src/c/pointer/PassValueAdress.c
#        src/c/array/ArrayParmas.c
#        src/c/pointer/PReturn.c
#        src/c/string/PString.c


#        src/c/string/Strcmp.c
#        src/c/string/SCopy.c
#        src/c/string/SFind.c
#        src/c/string/STrim.c
#        src/c/string/SSubString.c
#        src/c/string/StringCount.c
#        src/c/string/Sresver.c
#        src/c/string/StrNcpy.c
#        src/c/string/Strcat.c
#        src/c/string/Strcmpz.c
#        src/c/string/SPrintf.c
#        src/c/string/Strtok.c
#        src/c/string/Atof.c
#        src/c/string/Malloc.c
#        src/c/string/Malloc2.c

#        src/c/struct/StructDefine.c
#        src/c/struct/StructSize.c
#        src/c/struct/StructArray.c
#        src/c/struct/StructScore.c
#        src/c/struct/StructMemberPointer.c
#        src/c/struct/StructPointer.c
#        src/c/struct/HeapMalloc.c
#        src/c/struct/StructFunction.c
#        src/c/struct/StructInner.c
#        src/c/struct/UnionDemo.c
#        src/c/struct/EnumDemo.c
#        src/c/struct/TypeDefDemo.c
#        src/c/struct/UnionAndEnum.c

        src/c/file/Constant.h
        src/c/file/Constant.c
#        src/c/file/FileOpen.c
#        src/c/file/FPutc.c
#        src/c/file/FGetc.c
#        src/c/file/FeofDemo.c
#        src/c/file/FgetsFputs.c
#        src/c/file/SprintfSscanf.c
#        src/c/file/FwriteFread.c
#        src/c/file/FileCopy.c
#        src/c/file/RandFile.c

#        src/c/file/FileStat.c
#        src/c/file/FileBuffer.c

        )