cmake_minimum_required(VERSION 3.19)
project(FimicsC2020)

set(CMAKE_CXX_STANDARD 11)

add_executable(FimicsC2020
#        main.cpp
#        src/c/flow/Hello.c
#        src/c/dataType/DataType.c
#        src/c/flow/Flow.c
#        src/c/flow/ForDemo.c
#        src/c/array/ArrayDemo.c
#        src/c/array/TwoArray.c
#        src/c/string/CharArray.c
#
#        src/c/mutilFile/add.c
#        src/c/mutilFile/main.c
#        src/c/mutilFile/mul.c
#        src/c/mutilFile/sub.c
#
#        src/c/pointer/Pointer.c
#        src/c/pointer/PArray.c
#        src/c/pointer/POperation.c

#        src/c/pointer/MutilPointer.c

#        src/c/pointer/PassValueAdress.c
#        src/c/array/ArrayParmas.c
#        src/c/pointer/PReturn.c
#        src/c/string/PString.c


#        src/c/string/Strcmp.c
#        src/c/string/SCopy.c
#        src/c/string/SFind.c
#        src/c/string/STrim.c
#        src/c/string/SSubString.c
#        src/c/string/StringCount.c
#        src/c/string/Sresver.c
#        src/c/string/StrNcpy.c
#        src/c/string/Strcat.c
#        src/c/string/Strcmpz.c
#        src/c/string/SPrintf.c
#        src/c/string/Strtok.c
#        src/c/string/Atof.c
#        src/c/string/Malloc.c
#        src/c/string/Malloc2.c

#        src/c/struct/StructDefine.c
#        src/c/struct/StructSize.c
#        src/c/struct/StructArray.c
#        src/c/struct/StructScore.c
#        src/c/struct/StructMemberPointer.c
#        src/c/struct/StructPointer.c
#        src/c/struct/HeapMalloc.c
#        src/c/struct/StructFunction.c
#        src/c/struct/StructInner.c
#        src/c/struct/UnionDemo.c
#        src/c/struct/EnumDemo.c
#        src/c/struct/TypeDefDemo.c
#        src/c/struct/UnionAndEnum.c

#        src/c/file/Constant.h
#        src/c/file/Constant.c
#        src/c/file/FileOpen.c
#        src/c/file/FPutc.c
#        src/c/file/FGetc.c
#        src/c/file/FeofDemo.c
#        src/c/file/FgetsFputs.c
#        src/c/file/SprintfSscanf.c
#        src/c/file/FwriteFread.c
#        src/c/file/FileCopy.c
#        src/c/file/RandFile.c
#        src/c/file/FileStat.c
#        src/c/file/FileBuffer.c

#        src/c/advance/TypedefDemo.c
#        src/c/advance/XVoid.c
#        src/c/advance/XSizeof.c
#        src/c/advance/XVarModify.c
#        src/c/advance/XStack.c
#        src/c/advance/XMalloc.c
#        src/c/advance/XStaticExtern.c
#        src/c/advance/XExternTest.c
#        src/c/advance/XConst.c
#        src/c/advance/XDefine.c
#        src/c/advance/XVarPass.c
#        src/c/advance/XStackGrowth.c
#        src/c/advance/pointer/XPointerNull.c
#        src/c/advance/pointer/XPointerStep.c
#        src/c/advance/pointer/XPointerValue.c
#        src/c/advance/pointer/XpointerParams.c
#        src/c/advance/pointer/XPointerString.c
#        src/c/advance/XSprintf.c
#        src/c/advance/XRealloc.c
#        src/c/advance/XSscanf.c
#        src/c/advance/XSubString.c
#        src/c/advance/pointer/XPointerEasyError.c
#        src/c/advance/XConst1.c
#        src/c/advance/pointer/XPointerTwoAsInputParams.c
#        src/c/advance/pointer/XPointerTwoAsOutputParams.c
#        src/c/advance/pointer/XPointerTwoForFile.c
#        src/c/advance/XBitOperation.c
#        src/c/advance/array/ArrayOne.c
#        src/c/advance/array/ArrayPointerDefine.c
#        src/c/advance/array/ArrayTwoName.c
#        src/c/advance/array/PointerArraySort.c
#        src/c/advance/struct/StructUse.c
#        src/c/advance/struct/StructCopy.c
#        src/c/advance/struct/StructPointer.c
#        src/c/advance/struct/StructTwoPointer.c
#        src/c/advance/struct/StructOffet.c
#        src/c/advance/struct/MemoryAlign.c
#        src/c/advance/file/FileRW.c
#        src/c/advance/file/FileRW2.c
#        src/c/advance/file/FileConfig.c

#        src/c/advance/linkedlist/LinkedListStatic.cpp
#        src/c/advance/linkedlist/LinkedList2.c
#        src/c/advance/linkedlist/LinkedListFun.c
#        src/c/advance/fun2/FunPointer.c
#        src/c/advance/fun2/FunPointerAsParams.c
#        src/c/advance/fun2/FunCallBack.c
#        src/cpp/basic1/XCout.cpp

#        src/cpp/basic1/CoionsScope.cpp
#        src/cpp/basic1/namespace/XNameSpace.cpp
#        src/cpp/basic1/XUsing.cpp
#        src/cpp/basic1/StrengthenC.cpp
#        src/cpp/basic1/const/test.c
#        src/cpp/basic1/const/XConst.cpp
#        src/cpp/basic1/XRefcpp
#        src/cpp/basic1/PassValue.cpp
#        src/cpp/basic1/PointerRef.cpp
#        src/cpp/basic1/ConstRef.cpp
#        src/cpp/fun2/XCircle.cpp
#        src/cpp/fun2/XInlineFun.cpp
#        src/cpp/fun2/DefaultPamars.cpp
#        src/cpp/fun2/FunOverLoad.cpp
#        src/cpp/fun2/test.c
#        src/cpp/fun2/ExternC.cpp
#        src/cpp/fun2/CWarp.c
#        src/cpp/fun2/CppWarp.cpp
#        src/cpp/fun2/MemberAttr.cpp
#        src/cpp/genobj3/Cube.cpp
#        src/cpp/genobj3/ConStructAndDeStruct.cpp
#        src/cpp/genobj3/ConstructCategory.cpp
#        src/cpp/genobj3/ConstructCopy.cpp
#        src/cpp/genobj3/ConstructRegular.cpp
#        src/cpp/genobj3/DeepCopy.cpp
#        src/cpp/genobj3/InitList.cpp
#        src/cpp/genobj3/ClassObjAsMember.cpp
#        src/cpp/genobj3/XExplicit.cpp
#        src/cpp/genobj3/NewDelete.cpp
#        src/cpp/oop4/XSttic.cpp
#        src/cpp/oop4/SingleTon1.cpp
#        src/cpp/oop4/SingleTon2.cpp
#        src/cpp/oop4/ClassObject.cpp
#        src/cpp/oop4/XThis.cpp
#        src/cpp/oop4/NullPointer.cpp
#        src/cpp/oop4/ConstFunction.cpp
#        src/cpp/oop4/FriendGlobalFunction.cpp
#        src/cpp/oop4/FriendClass.cpp
#        src/cpp/oop4/FriendMemberFunction.cpp
#        src/cpp/operator5/XArray.cpp
#        src/cpp/operator5/OperatorAdd.cpp
#        src/cpp/operator5/OperatorLeftShit.cpp
#        src/cpp/operator5/OperatorIncreat.cpp
#        src/cpp/operator5/SmartPoint.cpp
#        src/cpp/operator5/OperatorEq.cpp
#        src/cpp/operator5/OperatorFun.cpp
#        src/cpp/operator5/OperatorString.cpp
#        src/cpp/extends6/Basic.cpp
#        src/cpp/extends6/ExtendsCategory.cpp
#        src/cpp/extends6/ExtendsModel.cpp
#        src/cpp/extends6/ExtendsConstructor.cpp
#        src/cpp/extends6/ExtendSameMebmer.cpp
#        src/cpp/extends6/ExtendsSameStaticMember.cpp
#        src/cpp/extends6/MutilExtends.cpp
#        src/cpp/extends6/DiamondExtends.cpp
#        src/cpp/virtualfun7/VirtualFun.cpp
#        src/cpp/virtualfun7/Polym.cpp
#        src/cpp/virtualfun7/AllVir.cpp
#        src/cpp/template/FunctionTemplate.cpp
#        src/cpp/template/CharIntSort.cpp
#        src/cpp/template/FunctionTemplate1.cpp
#        src/cpp/template/ClassTemplate1.cpp
#        src/cpp/template/ClassTemplate2.cpp
#        src/cpp/template/ClassTemplate3.cpp
#        src/cpp/template/ClassTemplate4AsParms.cpp
#        src/cpp/template/ClassTemplate5Extends.cpp
#        src/cpp/template/ClassTemplate6.cpp
#        src/cpp/template/ClassTemplate7Friend.cpp
#        src/cpp/template/myArray.cpp
#        src/cpp/template/myArray.h
#        src/cpp/template/ClassTemplate8.cpp

#        src/cpp/expection9/TypeCast.cpp
#        src/cpp/expection9/Expection1.cpp
#        src/cpp/expection9/ExceptionLifeCycle.cpp
#        src/cpp/expection9/ExceptionPolym.cpp
#        src/cpp/expection9/ExpectionStardand.cpp
#        src/cpp/expection9/MyException.cpp
#        src/cpp/expection9/StreamInput.cpp
#        src/cpp/expection9/StreamOutput.cpp
#        src/cpp/expection9/StreamFile.cpp
        )